image_processing/make_log.txt
src/BlockDetection.cpp: In function ‘Eigen::Vector2d BlockDetection::crudeEstimate(std::vector<cv::Point_<int> >&)’:
src/BlockDetection.cpp:77:43: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int j = 0; j < contours_poly.size(); j++) {
                                           ^
src/BlockDetection.cpp:79:35: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         if(j<contours_poly.size()-1){
                                   ^
src/BlockDetection.cpp:88:51: error: ‘dist’ was not declared in this scope
             double s = CameraMath::determineDepth(dist, num_of_blocks * BLOCK_HEIGHT);
                                                   ^
src/BlockDetection.cpp: In function ‘int BlockDetection::findLowestPoint(std::vector<cv::Point_<int> >)’:
src/BlockDetection.cpp:109:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int j = 0; j < contour.size(); j++) {
                                     ^
src/BlockDetection.cpp: In function ‘int BlockDetection::findLowestContour(ContourUtils::ContourData&)’:
src/BlockDetection.cpp:120:51: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int j = 0; j < contour_data.contours.size(); j++) {
                                                   ^
src/BlockDetection.cpp:123:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
make: *** [src/BlockDetection.o] Error 1
